-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
/home/shaun/lustre-wc-rel/lustre/mgs/mgs_llog.c:1539:2: note: ‘sprintf’ output between 9 and 10 bytes into a destination of size 9 sprintf(mdt_index, "-MDT%04x", i); ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /home/shaun/lustre-wc-rel/lustre/mgs/mgs_llog.c:1539:30: error: ‘sprintf’ may write a terminating nul past the end of the destination [-Werror=format-overflow=] sprintf(mdt_index, "-MDT%04x", i);